// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom NOT_FOUND route: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/missed",
      "search": "",
      "url": "/missed",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "NOT_FOUND",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/not-available",
      "search": "",
      "url": "/not-available",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "NOT_FOUND",
  },
]
`;

exports[`custom NOT_FOUND route: 1 - history_index 1`] = `1`;

exports[`custom NOT_FOUND route: 1 - response 1`] = `
Object {
  "payload": "thunk done",
  "type": "NOT_FOUND_COMPLETE",
}
`;

exports[`custom NOT_FOUND route: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`custom NOT_FOUND route: 1 - routes - NOT_FOUND - thunk 1`] = `2`;

exports[`custom NOT_FOUND route: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`custom NOT_FOUND route: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/missed",
          "search": "",
          "url": "/missed",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "NOT_FOUND",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/not-available",
          "search": "",
          "url": "/not-available",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "NOT_FOUND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/not-available",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/missed",
            "search": "",
            "url": "/missed",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "NOT_FOUND",
        },
      ],
      "hash": "",
      "index": 0,
      "key": "345678",
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/missed",
      "pop": false,
      "query": Object {},
      "ready": true,
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 404,
      "type": "NOT_FOUND",
      "url": "/missed",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 404,
    "type": "NOT_FOUND",
    "universal": false,
    "url": "/not-available",
  },
  "title": "NOT_FOUND_COMPLETE - \\"thunk done\\"",
}
`;

exports[`custom NOT_FOUND route: 1 - title 1`] = `"NOT_FOUND"`;

exports[`custom NOT_FOUND route: firstRoute - /missed - 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/missed",
      "search": "",
      "url": "/missed",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "NOT_FOUND",
  },
]
`;

exports[`custom NOT_FOUND route: firstRoute - /missed - 1 - history_index 1`] = `0`;

exports[`custom NOT_FOUND route: firstRoute - /missed - 1 - initial_state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/missed",
          "search": "",
          "url": "/missed",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "NOT_FOUND",
      },
    ],
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "init",
    "length": 1,
    "params": Object {},
    "pathname": "/missed",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "key": "",
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "universal": false,
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "NOT_FOUND",
    "universal": false,
    "url": "/missed",
  },
  "title": "@@redux/INIT",
}
`;

exports[`custom NOT_FOUND route: firstRoute - /missed - 1 - response 1`] = `
Object {
  "payload": "thunk done",
  "type": "NOT_FOUND_COMPLETE",
}
`;

exports[`custom NOT_FOUND route: firstRoute - /missed - 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/missed",
          "search": "",
          "url": "/missed",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "NOT_FOUND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/missed",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "key": "",
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 404,
    "type": "NOT_FOUND",
    "universal": false,
    "url": "/missed",
  },
  "title": "NOT_FOUND_COMPLETE - \\"thunk done\\"",
}
`;

exports[`custom NOT_FOUND route: firstRoute - /missed - 1 - title 1`] = `"NOT_FOUND"`;

exports[`options.formatRoute: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`options.formatRoute: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`options.formatRoute: firstRoute - /first - 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "url": "/first",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "FIRST",
  },
]
`;

exports[`options.formatRoute: firstRoute - /first - 1 - history_index 1`] = `0`;

exports[`options.formatRoute: firstRoute - /first - 1 - initial_state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "init",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "key": "",
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "universal": false,
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "@@redux/INIT",
}
`;

exports[`options.formatRoute: firstRoute - /first - 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "key": "",
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/first",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "FIRST",
}
`;

exports[`options.formatRoute: firstRoute - /first - 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "key": "",
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`options.formatRoute: firstRoute - /first - 1 - title 1`] = `"FIRST"`;

exports[`route as thunk function (pathless route): 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "url": "/first",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "FIRST",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/redirected",
      "search": "",
      "url": "/redirected",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "REDIRECTED",
  },
]
`;

exports[`route as thunk function (pathless route): 1 - history_index 1`] = `1`;

exports[`route as thunk function (pathless route): 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`route as thunk function (pathless route): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`route as thunk function (pathless route): 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`route as thunk function (pathless route): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/redirected",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "url": "/first",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "FIRST",
        },
      ],
      "hash": "",
      "index": 0,
      "key": "345678",
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "REDIRECTED",
    "universal": false,
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`route as thunk function (pathless route): 1 - title 1`] = `"REDIRECTED"`;

exports[`routes as path string: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`routes as path string: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`routes as path string: firstRoute - /first - 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "url": "/first",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "FIRST",
  },
]
`;

exports[`routes as path string: firstRoute - /first - 1 - history_index 1`] = `0`;

exports[`routes as path string: firstRoute - /first - 1 - initial_state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "init",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "key": "",
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "universal": false,
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "@@redux/INIT",
}
`;

exports[`routes as path string: firstRoute - /first - 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "key": "",
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/first",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "FIRST",
}
`;

exports[`routes as path string: firstRoute - /first - 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "key": "",
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`routes as path string: firstRoute - /first - 1 - title 1`] = `"FIRST"`;
